# tsforge

./: .gitignore  Makefile  README.md  environment.yml  fill_gaps.py  lineage.py  logger.py  pyproject.toml
.github/workflows/: quarto-publish.yml  tests.yml
docs/: _quarto.yml  index.qmd  styles.css
docs/_site/: index.html  search.json  tutorials.html
docs/_site/site_libs/bootstrap/: bootstrap-9ccc052e838921a799c52fe23d392808.min.css  bootstrap-dark-baafea9ed90c82928cb3953c7deda48e.min.css
docs/_site/tutorials/: 01_intro.html  plot_timeseries.html
docs/tutorials/: 01_intro.qmd  plot_seasonal.qmd  plot_timeseries.qmd
examples/: .gitignore  00_initial_setup.ipynb  02_plots.ipynb  04_tsfeatures_summary.ipynb  full_pseudo.py  pseudo_code.py  test_notebook.ipynb  tsforge_framework_tutorial.ipynb  user_experience_notebook.ipynb
src/tsforge/: __init__.py
src/tsforge/_utils/: call.py
src/tsforge/assets/css/: style-notebook.css  style-table.css
src/tsforge/datasets/: __init__.py  m5_subset.csv
src/tsforge/display/: __init__.py  styling.py
src/tsforge/eda/: __init__.py  check_model_readiness.py  check_panel.py  check_red_flags.py  diagnostics.py  segmentation.py  thresholds.py  ts_features_extension.py
src/tsforge/evaluation/: __init__.py  accuracy_table.py  metrics.py
src/tsforge/feature_engineering/: __init__.py  encode_features.py  recipes.py  rolling_features.py  summarize.py  time_features.py
src/tsforge/m5_utils/: __init__.py  m5_utils.py
src/tsforge/plots/: __init__.py  _layout.py  _preprocessing.py  _styling.py  plot_calendar_heatmap.py  plot_correlation.py  plot_cv_plan.py  plot_cv_results.py  plot_seasonal.py  plot_timeseries.py  style.py
src/tsforge/plots/charts/: __init__.py  plot_decomposition.py  plot_distribution.py  plot_intermittancy.py  plot_seasonal.py  plot_strength.py  plot_timeseries.py
src/tsforge/plots/core/: __init__.py  anomalies.py  base.py  events.py  forecast.py  id_selection.py  modes.py  palette.py  preprocess.py  theme.py
src/tsforge/plots/eda/: __init__.py  calendar.py  correlation.py  coverage.py  decomposition.py  distribution.py  intermittency.py  portfolio.py  seasonal.py  timeseries.py
src/tsforge/plots/evaluation/: __init__.py  cv.py  diagnostics.py  strength.py
src/tsforge/preprocessing/: __init__.py  fill_gaps.py  outliers.py  pad.py
src/tsforge/validation/: __init__.py  panel_checks.py
src/tsforge/workflows/: __iniit__.py  __init__.py  baselines.py  manager.py  nixtla_demo.py  recipe.py  workflow.py  workflows.py
tests/: test_diagnostics.py  test_metrics.py  test_recipes.py  test_workflows.py
