[tool.poetry]
name = "tsforge"
version = "0.1.0"
description = "TSForge + course: build powerful forecasts in Python"
authors = ["Jeff Tackes <tackes@gmail.com>"]
packages = [{ include = "tsforge", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2"
numpy = "^2.0"
scikit-learn = "^1.5"
scipy = "^1.13"
matplotlib = "^3.9"
plotly = "^5.23"
pydantic = "^2.8"
typer = "^0.12"            # CLI (optional)
holidays = "^0.58"
statsforecast = "^1.7"
mlforecast = "^0.13"
neuralforecast = "^1.7"
lightgbm = "^4.5"
xgboost = "^2.1"
rich = "^13.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.11"
jupyter = "^1.1"
nbstripout = "^0.7"
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
tsf = "tsforge.cli.main:app"   # `tsf` command if you enable Typer CLI
