[tool.poetry]
name = "tsforge"
version = "0.1.0"
description = "TSForge + course: build powerful forecasts in Python"
authors = ["Jeff Tackes <tackes@gmail.com>"]
packages = [{ include = "tsforge", from = "src" }]

include = [
    "src/tsforge/datasets/*.csv",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
statsmodels = "^0.14.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"

pydantic = "^2.9.2"
typer = "^0.12.5"
rich = "^13.9.4"
holidays = "^0.58"

# Nixtla stack (latest stable as of today)
statsforecast = "1.7.5"
mlforecast = "0.13.4"
neuralforecast = "1.7.2"
utilsforecast = "0.1.12"

# ML regressors
lightgbm = "^4.5.0"
xgboost = "^2.1.2"
catboost = "^1.2.7"

# Optional performance
pyarrow = "17.0.0"
joblib = "^1.4.2"

[tool.poetry.extras]
cli = ["typer", "rich"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
jupyter = "^1.1.1"
nbstripout = "^0.7.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
pre-commit = "^3.8.0"
mkdocstrings = { extras = ["python"], version = "^0.26.2" }

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
tsf = "tsforge.cli.main:app"   # `tsf` command if you enable Typer CLI


#  poetry show --tree